--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 	<head>
 		<title>Kwondale</title>
 		<link href="styles/main.css" rel="stylesheet" type="text/css"/>
+		<style>
+			body {
+				background: black;
+			}
+			li{
+				color: red;
+				opacity: 0.7;
+			}
+		</style>
+		}
 	</head>
 	<body>
 		<h1>Michael Cullen</h1>
