--- a/index.html
+++ b/index.html
@@ -3,26 +3,18 @@
 	<head>
 		<title>Kwondale</title>
 		<link href="styles/main.css" rel="stylesheet" type="text/css"/>
-		<style>
-			body {
-				background: black;
-			}
-			li{
-				color: red;
-				opacity: 0.7;
-			}
-		</style>
-		}
 	</head>
 	<body>
 		<h1>Michael Cullen</h1>
 		<h3>Michael Jordan's Pages</h3>
+		I'm a hard baller. <em>Ball hard for life.</em> You can catch me <strong>ballin</strong> any day of the week. This is my website about hard ballin.
 		<ul>
-			<li>Home</li>
-			<li><a href="portfolio.html">Portfolio</a></li>
-			<li><a href="photos.html">Photos</a></li>
+			<p>
+				<li>Home</li>
+				<li><a href="portfolio.html">Portfolio</a></li>
+				<li><a href="photos.html">Photos</a></li>
+			</p>
 		</ul>
-		this is <strong>bold</strong> <br>
-		this is <em>italic</em> <br>
+		<button>Click here to learn more</button>
 	</body>
 </html>
