--- a/index.html
+++ b/index.html
@@ -5,16 +5,22 @@
 		<link href="styles/main.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body>
+		<header>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="pages/portfolio.html">Portfolio</a></li>
+				<li><a href="pages/photos.html">Photos</a></li>
+			</ul>
+			<h1>Title</h1>
+		</header>
+		<section>
+			<div>a</div>
+			<div>b</div>
+			<div>c</div>
+		</section>
+		<section>lower-section</section>
+		<footer>footer</footer>
 		<h1>Michael Cullen</h1>
-		<h3>Michael Jordan's Pages</h3>
 		I'm a hard baller. <em>Ball hard for life.</em> You can catch me <strong>ballin</strong> any day of the week. This is my website about hard ballin.
-		<ul>
-			<p>
-				<li>Home</li>
-				<li><a href="portfolio.html">Portfolio</a></li>
-				<li><a href="photos.html">Photos</a></li>
-			</p>
-		</ul>
-		<button>Click here to learn more</button>
 	</body>
 </html>
