--- a/pages/photos.html
+++ b/pages/photos.html
@@ -1,18 +1,27 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Photos</title>
-    <link href="styles/main.css" rel="stylesheet" type="text/css"/>
-  </head>
-  <body>
-    <h1>Photos</h1>
-		<h3>Michael Jordan's Pages</h3>
-    <ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="portfolio.html">Portfolio</a></li>
-			<li>Photos</li>
-
-      <img src="https://cdn.nba.com/headshots/nba/latest/1040x760/893.png" alt="Michael Ballin" width="300px" height="225px">
-		</ul>
-  </body>
+	<head>
+		<title>Kwondale</title>
+		<link href="../styles/main.css" rel="stylesheet" type="text/css"/>
+	</head>
+	<body>
+		<header>
+			<ul>
+				<li><a href="../index.html">Home</a></li>
+				<li><a href="portfolio.html">Portfolio</a></li>
+				<li><a href="photos.html">Photos</a></li>
+			</ul>
+			<h1>Title</h1>
+		</header>
+		<section>
+			<div>a</div>
+			<div>b</div>
+			<div>c</div>
+		</section>
+		<section>lower-section</section>
+		<footer>footer</footer>
+		<img src="https://cdn.nba.com/headshots/nba/latest/1040x760/893.png" alt="Michael Ballin" width="300px" height="225px">
+	</body>
 </html>
+
+
