--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -1,22 +1,30 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Portfolio</title>
-    <link href="styles/main.css" rel="stylesheet" type="text/css"/>
-  </head>
-  <body>
-    <h1>Portfolio</h1>
-    <h3>Michael Jordan's Pages</h3>
-    <ul>
-      <li><a href="index.html">Home</li>
-			<li>Portfolio</li>
-			<li><a href="photos.html">Photos</a></li>
-    </ul>
-    <h3>Skills</h3>
-    <ul>
+	<head>
+		<title>Kwondale</title>
+		<link href="../styles/main.css" rel="stylesheet" type="text/css"/>
+	</head>
+	<body>
+		<header>
+			<ul>
+				<li><a href="../index.html">Home</a></li>
+				<li><a href="portfolio.html">Portfolio</a></li>
+				<li><a href="photos.html">Photos</a></li>
+			</ul>
+			<h1>Title</h1>
+		</header>
+		<section>
+			<div>a</div>
+			<div>b</div>
+			<div>c</div>
+		</section>
+		<section>lower-section</section>
+		<footer>footer</footer>
+		<h1>Michael Cullen</h1>
+		<ul>
       <li>Ballin</li>
       <li>Ballin harder</li>
       <li>Hard ballin</li>
     </ul>
-  </body>
+	</body>
 </html>
